--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,4 @@
 {
-    "name": "ali/datatable",
     "description": "Symfony2 Ajax Datagrid Bundle for doctrine2 entities",
     "keywords": ["symfony2","jquery","datatable"],
     "homepage": "https://github.com/benjaminu/AliDatatableBundle",
@@ -9,6 +8,11 @@
         {
             "name": "Ali hichem",
             "email": "ali.hichem@mail.com",
+            "role": "Developer"
+        },
+        {
+            "name": "Benjamin Ugbene",
+            "email": "benjamin.ugbene@googlemail.com",
             "role": "Developer"
         }
     ],
