--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ali/datatables-benjaminu",
+    "name": "ali/datatable-benjaminu",
     "description": "Symfony2 Ajax Datagrid Bundle for doctrine2 entities",
     "keywords": ["symfony2","jquery","datatable"],
     "homepage": "https://github.com/benjaminu/AliDatatableBundle",
